--- a/localisation/english/FRA_l_english.yml
+++ b/localisation/english/FRA_l_english.yml
@@ -399,18 +399,18 @@ france_retreat:0 "French Retreat"
  FRA_continue_mandat_desc:0 "As the storm clouds of war gather, it becomes increasingly clear that conflict is unavoidable. Accepting the inevitable allows us to focus our energies on preparation and strategy, ensuring that when war comes, France will stand united and resolute against her foes."
  FRA_develop_morocco:0 "Develop Morocco"
  FRA_develop_morocco_desc:0 "Our protectorate of Morocco needs more funds to enforce the local production and develop an effective economy."
- FRA_develop_tunisia:0 "Develop Tunisia"
- FRA_develop_tunisia_desc:0 "The Tunisian protectorate shows vast industrial possibilities; we should develop the current infrastructures."
- FRA_develop_algeria:0 "Develop Algeria"
+ FRA_develop_tunisia:0 "Develop Syria"
+
+ FRA_develop_algeria:0 "Maintain Control of Algeria"
  FRA_develop_algeria_desc:0 "We should focus on industry in Algiers. Should tensions increase in Europe, we will still have an industrial capacity outside the reach of enemy bombers."
- FRA_develop_indochine:0 "Develop Ivory Coast"
- FRA_develop_indochine_desc:0 "Develop Ivory Coast"
+ FRA_develop_ivory_coast:0 "Develop Ivory Coast"
+ FRA_develop_ivory_coast_desc:0 "Develop Ivory Coast"
  FRA_technology_sharing:0 "Technology Sharing"
  FRA_technology_sharing_desc:0 "To stay in the technological course, a good solution could be to share our research with our colonies and our allies."
  FRA_technology_sharing_tooltip:0 "All the [FRA.GetADjective] colonies gain §G5%§! technology sharing bonus from §Y[FRA.GetADjective] Research§!."
- FRA_sahara_oil:0 "Sahara Oil"
- FRA_sahara_oil_desc:0 "Oil is the only resource [FRA.GetNameDef] doesn't have. We could begin prospecting the Sahara desert to find this black gold. Also, our oil production is still minimal, so we should develop synthetic oil production technology as [GER.GetNameDef] has."
- FRA_tungsten_mines:0 "Tungsten Mines"
+ FRA_develop_equitorial_africa:0 "Develop Equitorial Africa"
+ FRA_colonial_retreat:0 "Colonial Retreat"
+ FRA_tungsten_mines:0 "Import Tungesten Deposits"
  FRA_tungsten_mines_desc:0 "To feed our war machine, we need more tungsten. The Indochinese mines could supply our needs if we develop them."
  FRA_vienot_agreement:0 "Defence Of The Mainland"
  FRA_vienot_agreement_desc:0 "As the winds of war sweep across Europe, France must fortify her borders and prepare for the inevitable conflict. The Defence of the Mainland focus will strengthen our fortifications, bolster our garrisons, and ensure that every French citizen is ready to defend La Patrie. We shall make our nation an unbreakable fortress, a beacon of resistance against any who would dare to invade our sacred soil."
@@ -422,14 +422,17 @@ france_retreat:0 "French Retreat"
  FRA_autonomy_indochina_tooltip:0 "§YVietnam§!, §YCambodia§! and §YLaos§! will become §YAssociated States§!. They can also take political focus without conditions and lock them to pro-[FRA.GetAdjective] diplomacy."
  FRA_self_government_for_the_colonies:0 "Self Government for the Colonies"
  FRA_self_government_for_the_colonies_desc:0 "We should accord more autonomy to the overseas provinces that aren't heavily tied to [FRA.GetNameDef]. A local government is more effective in managing an administration far from [FRA.GetNameDef]."
- FRA_consolidate_african_federations:0 "Consolidate Our African Territories"
+ FRA_consolidate_african_federations:0 "Consolidate Our Homeland"
  FRA_consolidate_african_federations_desc:0 "As Europe teeters on the brink of war, it is crucial that we secure our overseas territories. By consolidating our African holdings, we can ensure a stable flow of resources and manpower, fortifying our position and extending our strategic depth beyond the European theatre."
  FRA_gueye_lamine_law:0 "Guèye Lamine Law"
  FRA_gueye_lamine_law_desc:0 "Each individual of the [FRA.GetAdjective] empire must be equal in rights, as [FRA.GetNameDef] is the guarantor even if the colonists aren't pleased with it."
+ FRA_gueye_lamine_law2:0 "Four Year Defense Plan"
+ FRA_gueye_lamine_law3:0 "Improve Defense Plan"
  FRA_create_french_union:0 "Create the French Union"
  FRA_create_french_union_desc:0 "With all these reforms, the [FRA.GetAdjective] colonial empire as it previously was is now outdated. A new system will tie together [FRA.GetNameDef] and every citizen of the collective."
  FRA_overseas_departements:0 "Overseas Departments"
  FRA_overseas_departements_desc:0 "We should consider improving upon the administration of the outremer territories, even if it means spending many resources to solidify the state administration."
+ FRA_colonial_warning_tt:0 "§R DO NOT CORE LAND OR YOU WILL LOOSE IT UPON CAPITUALION"
  
  
 	#### REARMEMENT FOCUS ####
