French Focus tree localization
sss

--- a/localisation/english/FRA_l_english.yml
+++ b/localisation/english/FRA_l_english.yml
@@ -1,1 +1,188 @@
 ﻿l_english:
+ FRA_tools_modernisation:0 "Tools Modernisation"
+ FRA_colonial_investments:0 "Colonial Investments"
+ FRA_rearmament:0 "Rearmament"
+ FRA_radicalize_front:0 "Radicalize Front"
+ FRA_status_quo:0 "Status Quo"
+ FRA_far_right_leagues:0 "Far Right Leagues"
+ FRA_action_francaise:0 "Action Francaise"
+ FRA_sncf:0 "Sncf"
+ FRA_monetary_tripartite_agreement:0 "Monetary Tripartite Agreement"
+ FRA_cnrs:0 "Cnrs"
+ FRA_buy_heavy_water:0 "Buy Heavy Water"
+ FRA_research_grants:0 "Research Grants"
+ FRA_continue_mandat:0 "Continue Mandat"
+ FRA_develop_algeria:0 "Develop Algeria"
+ FRA_develop_ivory_coast:0 "Develop Ivory Coast"
+ FRA_develop_tunisia:0 "Develop Tunisia"
+ FRA_develop_morocco:0 "Develop Morocco"
+ FRA_develop_equitorial_africa:0 "Develop Equitorial Africa"
+ FRA_tungsten_mines:0 "Tungsten Mines"
+ FRA_vienot_agreement:0 "Vienot Agreement"
+ FRA_rewrite_protectorate_treaties:0 "Rewrite Protectorate Treaties"
+ FRA_consolidate_african_federations:0 "Consolidate African Federations"
+ FRA_autonomy_indochina:0 "Autonomy Indochina"
+ FRA_gueye_lamine_law:0 "Gueye Lamine Law"
+ FRA_gueye_lamine_law2:0 "Gueye Lamine Law2"
+ FRA_gueye_lamine_law3:0 "Gueye Lamine Law3"
+ FRA_encourage_immigration:0 "Encourage Immigration"
+ FRA_war_material_licence:0 "War Material Licence"
+ FRA_commit_automobile_manufacturer:0 "Commit Automobile Manufacturer"
+ FRA_defense_national_funds:0 "Defense National Funds"
+ FRA_partial_mobilization:0 "Partial Mobilization"
+ FRA_military_complex_nationalisation:0 "Military Complex Nationalisation"
+ FRA_aircraft_manufacturer_nationalisation:0 "Aircraft Manufacturer Nationalisation"
+ FRA_war_effort_law:0 "War Effort Law"
+ FRA_wartime_organisation_act:0 "Wartime Organisation Act"
+ FRA_further_armament_program:0 "Further Armament Program"
+ FRA_intervention_committee:0 "Intervention Committee"
+ FRA_work_with_the_cgt:0 "Work With The Cgt"
+ FRA_pcf_sfio_coalition:0 "Pcf Sfio Coalition"
+ FRA_ideological_indoctrination:0 "Ideological Indoctrination"
+ FRA_syndicalist_revolution:0 "Syndicalist Revolution"
+ FRA_industrial_decentralization:0 "Industrial Decentralization"
+ FRA_commune_proclamation:0 "Commune Proclamation"
+ FRA_collectivisation:0 "Collectivisation"
+ FRA_assistance_treaty:0 "Assistance Treaty"
+ FRA_grands_travaux:0 "Grands Travaux"
+ FRA_research_cooperation:0 "Research Cooperation"
+ FRA_social_reforms:0 "Social Reforms"
+ FRA_support_blum:0 "Support Blum"
+ FRA_increase_military_spendings:0 "Increase Military Spendings"
+ FRA_further_the_reforms:0 "Further The Reforms"
+ FRA_law_against_combat_groups:0 "Law Against Combat Groups"
+ FRA_parti_social_francais:0 "Parti Social Francais"
+ FRA_approach_the_radical_party:0 "Approach The Radical Party"
+ FRA_support_daladier:0 "Support Daladier"
+ FRA_reynaud_economic_reforms:0 "Reynaud Economic Reforms"
+ FRA_rearmament_policy:0 "Rearmament Policy"
+ FRA_arms_purchases_in_the_us:0 "Arms Purchases In The Us"
+ FRA_intervention:0 "Intervention"
+ FRA_popular_front_united:0 "Popular Front United"
+ FRA_economic_cooperation_agreement:0 "Economic Cooperation Agreement"
+ FRA_front_liberte:0 "Front Liberte"
+ FRA_support_ppf:0 "Support Ppf"
+ FRA_we_want_petain:0 "We Want Petain"
+ FRA_class_collaboration:0 "Class Collaboration"
+ FRA_the_three_levers:0 "The Three Levers"
+ FRA_unify_the_metropole:0 "Unify The Metropole"
+ FRA_root_out_communism:0 "Root Out Communism"
+ FRA_ultimatum_to_belgium:0 "Ultimatum To Belgium"
+ FRA_claim_rhineland:0 "Claim Rhineland"
+ FRA_operation_charlemagna:0 "Operation Charlemagna"
+ FRA_dismantle_germany:0 "Dismantle Germany"
+ FRA_papal_rehabilitation:0 "Papal Rehabilitation"
+ FRA_repeal_the_law_of_exile:0 "Repeal The Law Of Exile"
+ FRA_support_the_legitimatises:0 "Support The Legitimatises"
+ FRA_side_with_the_orleanists:0 "Side With The Orleanists"
+ FRA_brumaire_movement:0 "Brumaire Movement"
+ FRA_national_integralism:0 "National Integralism"
+ FRA_social_nationalism:0 "Social Nationalism"
+ FRA_decentralise_the_state:0 "Decentralise The State"
+ FRA_restore_ancient_reights:0 "Restore Ancient Reights"
+ FRA_embrace_the_counter_revolution:0 "Embrace The Counter Revolution"
+ FRA_counter_the_fascist_infulence:0 "Counter The Fascist Infulence"
+ FRA_oust_maurras:0 "Oust Maurras"
+ FRA_keep_the_separation_of_church_and_state:0 "Keep The Separation Of Church And State"
+ FRA_constitutional_monarchy:0 "Constitutional Monarchy"
+ FRA_metropolitan_priority:0 "Metropolitan Priority"
+ FRA_public_works:0 "Public Works"
+ FRA_assist_the_carlist_cause:0 "Assist The Carlist Cause"
+ FRA_intervene_in_the_spanish_civil_war:0 "Intervene In The Spanish Civil War"
+ FRA_secure_the_crown_of_spain:0 "Secure The Crown Of Spain"
+ FRA_claim_the_andorran_throne:0 "Claim The Andorran Throne"
+ FRA_proclaim_the_dual_monarchy:0 "Proclaim The Dual Monarchy"
+ FRA_pacify_the_spanish_countryside:0 "Pacify The Spanish Countryside"
+ FRA_support_the_spanish_nationalists:0 "Support The Spanish Nationalists"
+ FRA_anti_german_front:0 "Anti German Front"
+ FRA_ally_italy:0 "Ally Italy"
+ FRA_pact_with_spain:0 "Pact With Spain"
+ FRA_anti_communism_r56:0 "Anti Communism R56"
+ FRA_militarist_society:0 "Militarist Society"
+ FRA_seize_the_industralist_assets:0 "Seize The Industralist Assets"
+ FRA_legacy_of_the_grande_armee:0 "Legacy Of The Grande Armee"
+ FRA_the_new_continental_system:0 "The New Continental System"
+ FRA_our_natural_borders:0 "Our Natural Borders"
+ FRA_destroy_albion:0 "Destroy Albion"
+ FRA_nothern_italy_claim:0 "Nothern Italy Claim"
+ FRA_secure_catalonia:0 "Secure Catalonia"
+ FRA_split_belgium:0 "Split Belgium"
+ FRA_crush_germany:0 "Crush Germany"
+ FRA_reorganize_the_dutch:0 "Reorganize The Dutch"
+ FRA_second_march_on_moscow:0 "Second March On Moscow"
+ FRA_restore_the_mexican_monarchy:0 "Restore The Mexican Monarchy"
+ FRA_take_back_north_america:0 "Take Back North America"
+ FRA_plan_xiv:0 "Plan Xiv"
+ FRA_foreign_guest_workers:0 "Foreign Guest Workers"
+ FRA_invest_in_our_weaker_allies:0 "Invest In Our Weaker Allies"
+ FRA_coordinate_rearmament:0 "Coordinate Rearmament"
+ FRA_research_treaty:0 "Research Treaty"
+ FRA_preventive_intervention:0 "Preventive Intervention"
+ FRA_humanite_unie:0 "Humanite Unie"
+ FRA_fascist_threat:0 "Fascist Threat"
+ FRA_strike_empire:0 "Strike Empire"
+ FRA_help_the_spanish_republicans:0 "Help The Spanish Republicans"
+ FRA_continue_the_fight_in_africa:0 "Continue The Fight In Africa"
+ FRA_mobilize_the_empire:0 "Mobilize The Empire"
+ FRA_radio_brazzaville2:0 "Radio Brazzaville2"
+ FRA_equatorial_african_gold_mining2:0 "Equatorial African Gold Mining2"
+ FRA_improve_equatorial_roads2:0 "Improve Equatorial Roads2"
+ FRA_exploit_rubber_vines2:0 "Exploit Rubber Vines2"
+ FRA_continue_the_fight2:0 "Continue The Fight2"
+ FRA_the_free_french_navy2:0 "The Free French Navy2"
+ FRA_colonial_recruitment2:0 "Colonial Recruitment2"
+ FRA_prepare_for_our_return2:0 "Prepare For Our Return2"
+ FRA_an_african_army2:0 "An African Army2"
+ FRA_improved_logistics2:0 "Improved Logistics2"
+ FRA_the_regiment_normandie2:0 "The Regiment Normandie2"
+ FRA_maxime_plan:0 "Maxime Plan"
+ FRA_fortification_focus:0 "Fortification Focus"
+ FRA_commission_fortified_regions:0 "Commission Fortified Regions"
+ FRA_heavy_armor_focus:0 "Heavy Armor Focus"
+ FRA_extend_the_maginot_line:0 "Extend The Maginot Line"
+ FRA_maurice_plan:0 "Maurice Plan"
+ FRA_motorized_focus:0 "Motorized Focus"
+ FRA_the_mas38:0 "The Mas38"
+ FRA_infantry_focus:0 "Infantry Focus"
+ FRA_alpine_forts:0 "Alpine Forts"
+ FRA_artillery_focus:0 "Artillery Focus"
+ FRA_infantry_tanks:0 "Infantry Tanks"
+ FRA_the_somua_s35:0 "The Somua S35"
+ FRA_army_reform:0 "Army Reform"
+ FRA_commandos_marine:0 "Commandos Marine"
+ FRA_foreign_legion:0 "Foreign Legion"
+ FRA_africa_army:0 "Africa Army"
+ FRA_colonial_troops:0 "Colonial Troops"
+ FRA_division_cuirassee:0 "Division Cuirassee"
+ FRA_mechanized_focus:0 "Mechanized Focus"
+ FRA_tank_modernisation:0 "Tank Modernisation"
+ GFX_focus_NOR_rikstanken:0 "Focus Nor Rikstanken"
+ FRA_CHEDN:0 "Chedn"
+ FRA_experiment_castex_strategies:0 "Experiment Castex Strategies"
+ FRA_adapt_young_school_concepts:0 "Adapt Young School Concepts"
+ FRA_undersea_combat:0 "Undersea Combat"
+ FRA_strategic_manoeuvre:0 "Strategic Manoeuvre"
+ FRA_lay_down_the_jean_bart:0 "Lay Down The Jean Bart"
+ FRA_mediterranean_special_measures:0 "Mediterranean Special Measures"
+ FRA_the_le_hardi_class_destroyer:0 "The Le Hardi Class Destroyer"
+ FRA_improved_screen_ships:0 "Improved Screen Ships"
+ FRA_capital_ship_focus:0 "Capital Ship Focus"
+ FRA_carrier_focus:0 "Carrier Focus"
+ FRA_darlan_doctrine:0 "Darlan Doctrine"
+ FRA_carrier_planes:0 "Carrier Planes"
+ FRA_naval_construction_program:0 "Naval Construction Program"
+ FRA_increase_repair_capabilities:0 "Increase Repair Capabilities"
+ FRA_colonial_naval_bases:0 "Colonial Naval Bases"
+ FRA_develop_colonial_dockyards:0 "Develop Colonial Dockyards"
+ FRA_interwar_experience:0 "Interwar Experience"
+ FRA_form_the_first_strategic_bombing_unit:0 "Form The First Strategic Bombing Unit"
+ FRA_support_the_ecole_de_lair:0 "Support The Ecole De Lair"
+ FRA_faire_face:0 "Faire Face"
+ FRA_purchase_american_fighters:0 "Purchase American Fighters"
+ FRA_modernisation_program:0 "Modernisation Program"
+ FRA_enact_plan_v:0 "Enact Plan V"
+ FRA_develop_bomber_fleet:0 "Develop Bomber Fleet"
+ FRA_provide_aerial_support:0 "Provide Aerial Support"
+ FRA_new_french_fighter:0 "New French Fighter"
+ FRA_barrage_david:0 "Barrage David"
+ FRA_jet_effort:0 "Jet Effort"
