--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -259,7 +259,7 @@
  invite_SWE_bofors_organization: "Invite §Y$SWE_bofors_organization$§! to §Y[ROOT.GetNameWithFlag]§!"
 
  invites_mio_tt: "\n§YInvites Foreign Military Industrial Organization§!:"
-
+ unlock_mio_tt: "\n§YEstablish Military Industrial Organization§!"
 
  ############### Generic Purchase Ship ################
 
