--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -114,5 +114,10 @@
  AUS_habsburg_alliance: "Habsburg Alliance"
  BEL_pride_of_the_golden_lion: "Pride of the Golden Lion"
  BEL_european_union: "European Union"
+ AFG_turko_persian_union: "Turko-Persian Union"
  BEL_benelux_union_faction: "Benelux Union"
  BEL_SPR_alliance: "Belgian-Spanish Alliance"
+ PER_communist_faction: "Gulf Alliance"
+ PER_islamic_faction: "Islamic Brotherhood"
+ IRQ_arab_league_faction: "Arab League"
+ IRQ_meto: "Middle East Treaty Organization"
