--- a/localisation/english/modifiers_l_english.yml
+++ b/localisation/english/modifiers_l_english.yml
@@ -253,6 +253,7 @@
  MODIFIER_TRAINING_TIME_AIR:0 "Air training time"
  MODIFIER_AIR_TRAINING_XP_FACTOR:1 "Air Wing Training Experience Gain"
  MODIFIER_AIR_MISSION_XP_FACTOR:1 "Air Wing Mission Experience Gain"
+ air_mission_xp_gain_factor_tt: " $MODIFIER_AIR_MISSION_XP_FACTOR$: $RIGHT|+=%1$"
  MODIFIER_ARMY_MORALE:0 "Division Recovery Rate"
  MODIFIER_ARMY_MORALE_FACTOR:0 "Division Recovery Rate"
  army_morale_factor_tt: " $MODIFIER_ARMY_MORALE_FACTOR$: $RIGHT|+=%1$" 
@@ -839,7 +840,7 @@
  MODIFIER_MILITARY_LEADER_COST_FACTOR:0 "Military Leader Cost"
  MODIFIER_MILITARY_LEADER_COST_FACTOR_DESC:0 "Modifies the cost of military leaders"
  MODIFIER_AUTONOMY_GAIN:0 "Daily autonomy progress gain"
- autonomy_gain_tt: " $MODIFIER_AUTONOMY_GAIN$: $RIGHT|Y=1$"
+ autonomy_gain_tt: " $MODIFIER_AUTONOMY_GAIN$: $RIGHT|+=2$"
  MODIFIER_ARMY_LEADER_START_LEVEL:1 "Starting level of new army leaders"
  MODIFIER_ARMY_LEADER_START_ATTACK_LEVEL:0 "Starting Attack skill level of new army leaders"
  MODIFIER_ARMY_LEADER_START_DEFENSE_LEVEL:0 "Starting Defense skill level of new army leaders"
@@ -900,7 +901,7 @@
  MODIFIER_ACCLIMATIZATION_HOT_CLIMATE_GAIN_FACTOR:0 "Hot acclimatization gain factor"
  acclimatization_hot_climate_gain_factor_tt: " $MODIFIER_ACCLIMATIZATION_HOT_CLIMATE_GAIN_FACTOR$: $RIGHT|+=%1$"
  mobilization_laws_cost_factor:0 "Conscription Laws Cost"
- mobilization_laws_cost_factor_tt: "$mobilization_laws_cost_factor$: $RIGHT|-=%1$"
+ mobilization_laws_cost_factor_tt: " $mobilization_laws_cost_factor$: $RIGHT|-=%1$"
  trade_laws_cost_factor:0 "Trade Laws Cost"
  trade_laws_cost_factor_tt: "$trade_laws_cost_factor$: $RIGHT|-=%1$"
  economy_cost_factor:1 "Economy Laws Cost"
@@ -1219,6 +1220,7 @@
  MODIFIER_RECRUITABLE_POPULATION:0 "Additional Recruitable Population"
  MODIFIER_RECRUITABLE_POPULATION_FACTOR:0 "Recruitable Population"
  MODIFIER_RESISTANCE_ACTIVITY_FACTOR:0 "Resistance Activity Chance"
+ resistance_activity_tt: " $MODIFIER_RESISTANCE_ACTIVITY_FACTOR$: $RIGHT|R=%1$"
  state_resource_oil:0 "Oil"
  state_resource_aluminium:0 "Aluminum"
  state_resource_rubber:0 "Rubber"
@@ -2057,6 +2059,7 @@
  modifier_army_sub_unit_cavalry_attack_factor:0 "Cavalry Attack"
  modifier_army_sub_unit_cavalry_defence_factor:0 "Cavalry Defence"
  modifier_army_sub_unit_cavalry_speed_factor:0 "Cavalry Speed"
+ modifier_army_sub_unit_cavalry_speed_factor_tt: "$modifier_army_sub_unit_cavalry_speed_factor$: $RIGHT|+=%1$"
  modifier_army_sub_unit_camelry_attack_factor:0 "Camelry Attack"
  modifier_army_sub_unit_camelry_defence_factor:0 "Camelry Defense"
  modifier_army_sub_unit_camelry_speed_factor:0 "Camelry Speed"
@@ -2092,6 +2095,10 @@
  modifier_army_sub_unit_irregular_infantry_defence_factor:0 "Irregular Infantry Defense"
  modifier_army_sub_unit_irregular_infantry_max_org_factor:0 "Irregular Infantry Organization"
  modifier_army_sub_unit_irregular_infantry_speed_factor:0 "Irregular Infantry Speed"
+ modifier_army_sub_unit_irregular_infantry_attack_factor_tt: "$modifier_army_sub_unit_irregular_infantry_attack_factor$: $RIGHT|+=%1$"
+ modifier_army_sub_unit_irregular_infantry_defence_factor_tt: "$modifier_army_sub_unit_irregular_infantry_defence_factor$: $RIGHT|+=%1$"
+ modifier_army_sub_unit_irregular_infantry_max_org_factor_tt: "$modifier_army_sub_unit_irregular_infantry_max_org_factor$: $RIGHT|+=%1$"
+ modifier_army_sub_unit_irregular_infantry_speed_factor_tt: "$modifier_army_sub_unit_irregular_infantry_speed_factor$: $RIGHT|+=%1$"
  modifier_army_sub_unit_militia_attack_factor:0 "Militia Attack"
  modifier_army_sub_unit_militia_attack_factor_tt: "$modifier_army_sub_unit_militia_attack_factor$: $RIGHT|+=%1$"
  modifier_army_sub_unit_militia_defence_factor:0 "Militia Defense"
@@ -2126,10 +2133,10 @@
  MODIFIER_NAVAL_INVASION_PLANNING_SPEED_DESC:0 "Increases the rate at which a division's planning bonus is accumulated during a naval invasion."
  NAVAL_INVASION_PLANNING_BONUS_MALUS:0 "Base Naval Invasion Malus: $VALUE|R0$§R%§!"
  MODIFIER_TERRAIN_TRAIT_XP_GAIN_FACTOR:0 "Terrain traits XP Gain"
- modifier_experience_gain_motorized_combat_factor:0 "Motorised experence gain from combat"
- modifier_experience_gain_mechanized_combat_factor:0 "Mechanised experence gain from combat"
- modifier_experience_gain_infantry_combat_factor:0 "Infantry experence gain from combat"
- modifier_experience_gain_artillery_combat_factor:0 "Artillery experence gain from combat"
+ modifier_experience_gain_motorized_combat_factor:0 "Motorised experience gain from combat"
+ modifier_experience_gain_mechanized_combat_factor:0 "Mechanised experience gain from combat"
+ modifier_experience_gain_infantry_combat_factor:0 "Infantry experience gain from combat"
+ modifier_experience_gain_artillery_combat_factor:0 "Artillery experience gain from combat"
  experience_gain_artillery_combat_factor_tt: " $modifier_experience_gain_artillery_combat_factor$: $RIGHT|+=%1$"
  modifier_production_cost_supply_node_factor:0 "§YSupply Hub§! construction cost"
  modifier_production_cost_supply_node_factor_desc:0 "Modifies the cost of Supply Hub construction."
