--- a/localisation/english/JUNO_decisions_l_english.yml
+++ b/localisation/english/JUNO_decisions_l_english.yml
@@ -281,7 +281,9 @@
 
  CHL_adopt_the_patria_vieja_flag_decision: "Adopt the Patria Vieja flag"
 
- south_american_naval_arms_race_category: "The South American Naval Arms Race"
+ south_american_naval_arms_race_category: "[toa_purchase_dreadnaughts_descision_cat]"
+ south_american_naval_arms_race_category_default: "The South American Naval Arms Race"
+ south_american_naval_arms_race_category_generic: "Naval Expansion"
  SMB_purchase_dreadnought_tt: "If target nation agrees to sell dreadnoughts: "
  SMB_purchase_dreadnought_tt_2: "Gain §YTwo§! old battleships or heavy cruisers."
  purchase_dreadnoughts_usa: "[USA.GetFlag]Purchase Dreadnoughts from [USA.GetNameDef]"
