--- a/localisation/english/achievements_l_english.yml
+++ b/localisation/english/achievements_l_english.yml
@@ -103,3 +103,23 @@
  successful_dam_busting_raid_flag: "Successfully executed a §YDam Busting Raid§!"
  has_successfully_bombed_a_landmark_flag: "Successfully executed a §YRaid§! on a §YLandmark§!"
  the_true_successor_tt: "Controls both Brussels and Trier"
+
+
+ graveyard_of_empires_tt: "As [AFG.GetNonIdeologyName], [PER.GetNonIdeologyName], [IRQ.GetNonIdeologyName] or the [RAJ.GetNonIdeologyName], capitulate and control all of the other three nations cores."
+ AFG_capitulated_Soviet: "As [AFG.GetNonIdeologyName], capitulate the [SOV.GetNonIdeologyName]"
+ i_have_the_high_ground_tt: "As [AFG.GetNonIdeologyName], control all of states that covers the Himalyas"
+ pesky_greeks_tt: "As [PER.GetNonIdeologyName], become the owner of all [GRE.GetNonIdeologyName] core states"
+ the_sands_of_time_tt: "As [PER.GetNonIdeologyName], become owner of the entire Middle East"
+ the_legacy_of_cyrus_the_great_tt: "As [PER.GetNonIdeologyName], become the owner of the former Achaemenid Empire's states."
+ from_tehran_with_love_tt: "As [PER.GetNonIdeologyName], guarantee [POL.GetNonIdeologyName]'s independence and ensure it does not capitulate by 1945."
+ #cradle_of_civilization_tt: "Build the maximum infrastructure level in all core states and have over 99% stability"
+ its_just_good_business_tt: "As the East India Company, owning the Suez and Panama canals"
+ media_mughal_tt: "As the Mughal Empire, complete Agency Upgrade §Y$upgrade_psycho_warfare$§!, become §YSpy Master§! and have at least 8 operatives"
+ #oh_how_the_turntables: "As [RAJ.GetNonIdeologyName] puppet [ENG.GetNonIdeologyName] with Churchill as it's leader"
+ im_just_passing_by_tt: "As [RAJ.GetNonIdeologyName], own a state on each continent while being at peace"
+ thats_sikh_tt: "As Khalistan, control all of [RAJ.GetNonIdeologyName] starting states"
+ #oil_sheiks_tt: "As [IRQ.GetNonIdeologyName], have at least 500 oil in [IRQ.GetNonIdeologyName]."
+ revenge_for_1925_tt: "As [IRQ.GetNonIdeologyName], form the Hashemite Arab Federation and capitulate Saudi Arabia"
+ #avenging_the_sack_of_baghdad: "As [IRQ.GetNonIdeologyName], control the capital of Mongolia"
+ i_shall_either_find_a_way_or_make_one_tt: "As [RAJ.GetNonIdeologyName], fully control [2.GetName] and have an elephant unit in the state."
+ #savior_of_the_holy_lands: "Become the owner of [454.GetName] and [856.GetName]"
