--- a/localisation/english/designer_l_english.yml
+++ b/localisation/english/designer_l_english.yml
@@ -236,7 +236,7 @@
  tank_designer_land_cruiser_chassis: "Land Cruiser"
  tank_designer_land_cruiser_chassis_role_disallowed: "Requires a §Y$land_cruiser_chassis$§!."
 
- #TODO_Manu: Obsolete - Delete if no NSB support for these
+ #Obsolete - There is no NSB support for these
  tank_designer_armored_recovery_vehicle: "Armored Recovery Vehicle (Support Company)"
  tank_designer_armored_recovery_vehicle_role_disallowed: "Add a module that allows the §HArmored Recovery Vehicle§! role to be able to switch to it."
  tank_designer_clearance_vehicle: "Clearance Vehicle (Support Company)"
