--- a/localisation/english/diplomacy_l_english.yml
+++ b/localisation/english/diplomacy_l_english.yml
@@ -1612,6 +1612,24 @@ ARG_close_ties_with_america_idea_desc: "A symbol of closer ties between [USA.Get
 ARG_embargoed_us: "[ARG.GetNameDefCap] Embargoed Us"
 ARG_embargoed_us_desc: "[ARG.GetNameDefCap] embargoed us due to pressure from [USA.GetNameDef]."
 
+#### RAJ ####
+
+RAJ_did_not_help_famine: "Did not help during Famine"
+RAJ_did_help_famine: "Did help during Famine"
+
+
+
+#### IRAQ ####
+
+IRQ_decoupled_from_the_pound: "Decoupled from the Pound"
+IRQ_nationalized_our_oil: "Nationalized the Anglo-Iraqi Oil Company!"
+IRQ_expanded_anglo_iraqi_oil_company: "Expanded the Anglo-Iraqi Oil Company"
+IRQ_anglo_iraqi_treaty_in_place_opm: "Anglo-Iraqi Treaty in Place"
+IRQ_purchased_our_equipment: "Purchased Our Military Equipment"
+IRQ_embargoed_axis: "Embargoed Our Enemies"
+IRQ_better_relations: "Working towards regional partnership"
+KUR_wants_our_territory: "Rejected the Ankara Treaty borders"
+
 #Belgium
 
 BEL_embargoed_us: "Belgium embargoed us"
