--- a/localisation/english/equip_air_l_english.yml
+++ b/localisation/english/equip_air_l_english.yml
@@ -97,6 +97,9 @@
  nav_bomber_equipment:0 "Naval Bomber"
  cv_nav_bomber_equipment:1 "Carrier Naval Bomber"
  cv_nav_bomber_equipment_short:0 "CV Naval Bomber"
+ naval_bomber1: "Naval Bomber I"
+ naval_bomber2: "Naval Bomber II"
+ naval_bomber3: "Naval Bomber III"
  nav_bomber_equipment_1:0 "Naval Bomber I"
  nav_bomber_equipment_1_short:0 "NAV I"
  nav_bomber_equipment_1_desc:0 "Naval aviation will be vital in the coming decade to confront new developments in naval warfare, such as the increased importance of submarines. Seaplanes with capacity to work as dive bombers and recon vehicles will be of use."
