--- a/localisation/english/equip_naval_l_english.yml
+++ b/localisation/english/equip_naval_l_english.yml
@@ -134,9 +134,13 @@
  ship_hull_submarine:0 "Submarine"
  ship_hull_submarine_desc:0 "A far cry from the crude boats of the Great War, the modern submarine is more capable than ever before and can threaten even the biggest ship for a very moderate cost."
  ship_hull_submarine_1:1 "Early Submarine Hull"
+ early_ship_hull_submarine: "$ship_hull_submarine_1$"
  ship_hull_submarine_2:1 "1936 Submarine Hull"
+ basic_ship_hull_submarine: "$ship_hull_submarine_2$"
  ship_hull_submarine_3:1 "1940 Submarine Hull"
+ improved_ship_hull_submarine: "$ship_hull_submarine_3$"
  ship_hull_submarine_4:1 "1944 Submarine Hull"
+ advanced_ship_hull_submarine: "$ship_hull_submarine_4$"
  ship_hull_pre_dreadnought:0 "Pre-Dreadnought Hull"
  ship_hull_pre_dreadnought_desc:0 "A survivor of the time before even the dreadnought race that led to the Great War, the Pre-Dreadnought has only very limited combat value in this day and age."
  ship_hull_cruiser_panzerschiff:0 "Panzerschiff"
