--- a/localisation/english/military_industrial_organization_l_english.yml
+++ b/localisation/english/military_industrial_organization_l_english.yml
@@ -741,6 +741,30 @@ USA_mio_trait_dedicated_tank_factory: "Dedicated Tank Factory"
  RAJ_ishapore_rifle_factory_organization: "$ishapore_rifle_factory$"
  RAJ_ordnance_factories_board_organization: "$ordnance_factories_board$"
  RAJ_hindustan_aircraft_organization: "$hindustan_aircraft$"
+ RAJ_ordnance_factory_medak_organization: "Ordnance Factory Medak"
+ RAJ_mio_trait_ordnance_factory_kanpur_uttar_pradesh_art: "Ordnance Factory Kanpur"
+ RAJ_mio_trait_ordnance_factory_kanpur_uttar_pradesh_inf: "$RAJ_mio_trait_ordnance_factory_kanpur_uttar_pradesh_art$"
+ mio_policy_RAJ_general_ordnance_factory_board: "Ordnance Factory Board"
+ RAJ_mio_trait_chariot_of_victory: "Chariot of Victory"
+ RAJ_mio_trait_apc_research_effort: "APC Research Effort"
+ RAJ_supermarine_organization: "$supermarine$ - Indian Branch"
+ RAJ_vickers_armstrong_organization: "Vickers Armstrong - Indian Division"
+ RAJ_vauxhall_organization: "Vauxhall - Indian Division"
+ RAJ_harland_wolff_organization: "Harland & Wolff - Indian Division"
+ RAJ_cammell_laird_organization: "Cammell Laird - Indian Division"
+ RAJ_yarrow_shipbuilders_organization: "Yarrow Shipbuilders - Indian Division"
+ RAJ_john_brown_organization: "John Brown - Indian Division"
+ RAJ_hawker_organization: "Hawker - Indian Division"
+ RAJ_de_havilland_organization: "De Havilland - Indian Division"
+ RAJ_fairey_aviation_organization: "Fairey Aviation - Indian Division"
+ RAJ_avro_organization: "Avro - Indian Division"
+ RAJ_rsaf_enfield_organization: "RSAF Enfield - Indian Division"
+ RAJ_vauxhall_automotive_organization: "Vauxhall Automotive - Indian Division"
+ RAJ_royal_arsenal_organization: "Royal Arsenal - Indian Division"
+ RAJ_crossley_motors_organization: "Crossley Motors - Indian Division"
+
+
+
 
 
 ######################
@@ -1435,6 +1459,41 @@ USA_mio_trait_dedicated_tank_factory: "Dedicated Tank Factory"
  COG_fn_hershal_organization: "FN Hershal"
  COG_explosifs_congo_organization: "Société Africaine d'Explosifs Congo"
 
+
+ #AFGHANISTAN - Organizations
+ AFG_naval_organization: "Afghan Shipyards"
+ AFG_tanks_organization: "Herat Armories"
+ afg_tank_factory_mio: "Has established state run tank factory via §Y$AFG_placate_the_graduates$§! decisions"
+ AFG_aircraft_organization: "Afghan Air Company"
+ afg_aircraft_factory_mio: "Has established state run aircraft factory via §Y$AFG_placate_the_graduates$§! decisions"
+ AFG_infantry_organization: "Kabul Rifle Company"
+ afg_artillery_factory_mio: "Has established state run artillery factory via §Y$AFG_placate_the_graduates$§! decisions"
+ AFG_artillery_organization: "Kabul Foundry"
+ AFG_construct_mio_in_progress: "MIO construction in progress"
+ AFG_khyber_pass_rifling_org: "Khyber Pass Rifling"
+ AFG_khyber_pass_rifling_org_cost_reduction_1: "Cottage Industries"
+ AFG_khyber_pass_rifling_org_cost_reduction_2: "Scrap Conversion"
+ AFG_khyber_pass_rifling_org_cost_reduction_3: "Traditional Expertise"
+
+ #IRAN - Organizations
+ PER_tehran_armor_organization: "Tehran Armor"
+ PER_qorkhaneh_organization: "Qorkhaneh"
+ PER_shahbaz_organization: "Shahbaz Aircraft"
+ PER_iranian_shipyards_organization: "Iranian Shipyards"
+ PER_motor_organization: "Iran National Corp"
+
+ #Iraq - Organizations
+ IRQ_tanks_organization: "Tikrit Armor"
+ IRQ_naval_organization: "Basrah Naval Yards"
+ IRQ_aircraft_organization: "Habbaniya Aerodynamics"
+ IRQ_infantry_organization: "Najaf Rifle Company"
+ IRQ_artillery_organization: "Baghdad Armory"
+ IRQ_motor_organization: "Mosul Motor Company"
+ IRQ_support_organization: "Karbala Canvas and Garment Factory"
+ IRQ_multi_role_aircraft_organization: "Shaibah Air Force Department"
+ IRQ_close_air_support_aircraft_organization: "Al Rasheed Technical Air Arsenal"
+ IRQ_submarine_organization: "Umm Qasr Dockyards"
+ IRQ_kuwait_dockyards_organization: "Kuwait Dockyards"
 
 ########################################################################                                                 
 
