--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -425,13 +425,13 @@
  STATE_285:0 "New South Wales"
  STATE_286:1 "Southern Indochina"
  STATE_287:0 "Taklamakan"
- STATE_288:0 "Burma"
+ STATE_288:0 "Magwe"
  STATE_289:0 "Siam"
  STATE_290:0 "Spanish Africa"
  STATE_291:0 "Baghdad"
  STATE_292:0 "Nejd"
  STATE_293:0 "Yemen"
- STATE_294:0 "Oman"
+ STATE_294: "Muscat" # Was Oman
  STATE_295: "Léopoldville"
  STATE_296:0 "Portuguese Guinea"
  STATE_297:0 "Equatorial Guinea"
@@ -556,12 +556,12 @@
  STATE_416:0 "Khorasan"
  STATE_417:0 "Hamadan"
  STATE_418:0 "Semnan"
- STATE_419:1 "Tibriz"
+ STATE_419:1 "West Azerbaijan"
  STATE_420:0 "Gilan"
- STATE_421:0 "Kurdistan"
+ STATE_421:0 "Ilam"
  STATE_422:0 "Ceylon"
- STATE_423:0 "Madurai"
- STATE_424:0 "Madras"
+ STATE_423:0 "Southern Madras"
+ STATE_424:0 "Northern Madras"
  STATE_425:0 "Mysore"
  STATE_426:0 "Orissa"
  STATE_427:0 "Hyderabad"
@@ -573,16 +573,16 @@
  STATE_433:0 "Rajahsthan"
  STATE_434:0 "Arunachal Pradesh"
  STATE_435:0 "Bihar"
- STATE_436:0 "Jabalpur"
- STATE_437:0 "Indore"
- STATE_438:0 "Lucknow"
+ STATE_436:0 "Central Provinces"
+ STATE_437:0 "Central India"
+ STATE_438:0 "United Provinces"
  STATE_439:0 "Delhi"
- STATE_440:0 "Punjab"
+ STATE_440:0 "West Punjab"
  STATE_441:0 "Kashmir"
  STATE_442:0 "Peshawar"
  STATE_443:0 "Sind"
- STATE_444:0 "Baluchistan"
- STATE_445:0 "Quetta"
+ STATE_444: "South Baluchistan"
+ STATE_445: "Sibi" # was Quetta
  STATE_446:1 "Suez"
  STATE_447:0 "Alexandria"
  STATE_448:0 "Tripoli"
@@ -872,6 +872,7 @@
  STATE_731:0 "Central Macedonia"
  STATE_732:0 "Pamir"
  STATE_733:0 "Andaman"
+ STATE_733_shaheed:0 "Shaheed"
  STATE_734:0 "Nendo"
  STATE_735:0 "Savoy"
  STATE_736:1 "Litorale"
@@ -1173,6 +1174,41 @@
  718_autenticite_name: "Kisangani"
  890_autenticite_name: "Bukavu"
  889_autenticite_name: "Lubumbashi"
+ STATE_982: "Madras States"
+ STATE_983: "Kolhapur and Deccan"
+ STATE_984: "Bastar"
+ STATE_985: "Sikkim"
+ STATE_986: "East Punjab"
+ STATE_987: "Waziristan"
+ STATE_988: "North Baluchistan"
+ STATE_989: "Bahawalpur"
+ STATE_990: "Manipur"
+ STATE_991: "Gwalior"
+ STATE_992: "Province of Aden"
+ STATE_993: "Kentung and Yawnghwe"
+ STATE_994: "Tenasserim"
+ STATE_995: "Pegu"
+ STATE_996: "Irrawaddy"
+ STATE_997: "Arakan"
+ STATE_998: "Sagaing"
+ STATE_999: "Federated Shan States"
+ STATE_1000: "East Azerbaijan"
+ STATE_1001: "Kurdistan"
+ STATE_1002: "Yazd"
+ STATE_1003: "South Khorasan"
+ STATE_1004: "North Khorasan"
+ STATE_1005: "Qataghan"
+ STATE_1006: "Khyber Pass"
+ STATE_1007: "Maymanah"
+ STATE_1008: "Qandahar"
+ STATE_1009: "Farah"
+ STATE_1010: "Al Anbar"
+ STATE_1011: "Al Basrah"
+ STATE_1012: "Kalat"
+ STATE_1013: "Musandam"
+ STATE_1014: "Bahrain"
+ STATE_1015: "Oman"
+ STATE_1016: "Dhofar"
 
 
 
