--- a/localisation/english/tactics_l_english.yml
+++ b/localisation/english/tactics_l_english.yml
@@ -47,4 +47,12 @@
  tactic_overwhelming_fire:0 "Overwhelming Fire"
  tactic_barrage:0 "Suppressive Barrage"
  tactic_masterful_blitz:0 "Masterful Blitz"
+ tactic_urban_defense: "Urban Defense"
+ tactic_sf_storm: "Street Fighting"
+ tactic_sf_defense: "Defend City"
+ tactic_sf_mouse_holing: "Mouse Holing"
+ tactic_sf_barrage: "Street by Street Barrage"
+ tactic_sf_armor_supported_assault: "Armour Supported Urban Assault"
  has_flame_tank_units: "Has any Flame Tank unit"
+ tactic_sf_fortify: "Fortified Defense"
+ tactic_sf_ambush: "Urban Ambush Tactics"
