--- a/localisation/english/wtt_decisions_l_english.yml
+++ b/localisation/english/wtt_decisions_l_english.yml
@@ -1002,6 +1002,7 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  develop_nejd_oil_fields:0 "Develop Ghawar Oil Fields"
  develop_eastern_desert_oil_fields:0 "Develop Ras Gharib Oil Fields"
  develop_qatar_oil_fields:0 "Develop Dukhan Oil Fields"
+ develop_omani_oil_fields: "Develop Inner Omani Oil Fields"
  burma_road_expansion_tt:0 "Has completed either §YThe Burma Road§! or §YBurma Road§! focus, or is in a faction or a subject of a country that has." #NOTE: these are names of uk_burma_focus and CHI_burma_road
  develop_transdanubia_aluminium_deposits:0 "Develop Transdanubia Bauxite Deposits"
  develop_derna_oilfield:0 "Tap Derna Oilfields"
