Readding 1.5x focus and re adding soviet focus tree

--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -583,11 +583,11 @@
  soviet.14.d:0 "We are under pressure from Moscow to officially join the USSR. Should we agree to this?"
  soviet.14.a:0 "Yes, let us join them."
  soviet.14.b:0 "No, we have yet to reach our full potential!"
- soviet.15.t:0 "Tannu Tuva Refuses!"
- soviet.15.d:0 "The Tuvans have outrageously refused to merge with the Soviet Union! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
+ soviet.15.t:0 "Mongolia Refuses!"
+ soviet.15.d:0 "The Mongolias have outrageously refused to merge with the Soviet Union! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
  soviet.15.a:0 "Best of luck to them."
- soviet.16.t:0 "The Annexation of Tannu Tuva"
- soviet.16.d:0 "The Supreme Soviet has received a formal request from the Tuvan parliament for membership in the Soviet Union. They will be organized as the Tuvan Autonomous Oblast in the Russian SFSR."
+ soviet.16.t:0 "The Annexation of Mongolia"
+ soviet.16.d:0 "The Supreme Soviet has received a formal request from the Mongolian governemnt for membership in the Soviet Union. They will be organized as the Mongolian Autonomous Oblast in the Russian SFSR."
  soviet.16.a:0 "Welcome to the union, comrades."
  soviet.17.t:0 "Improving the Stalin Line"
  soviet.17.d:0 "A thorough revision of the defensive fortifications along our western border regions has been completed, and convicts from our corrective labor camps stand ready to begin work. Soon the Stalin Line will live up to its glorious namesake!"
